[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/spaceship.png" type="Texture" id=1]
[ext_resource path="res://Colliders/PlayerTrigger.tscn" type="PackedScene" id=2]
[ext_resource path="res://Colliders/HintPointer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Spaceship.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 14 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, -32 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "TakeOff"
length = 4.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2, 2.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -12, -32 ), Vector2( -12, -32 ), Vector2( -12, -45 ), Vector2( -12, -70 ), Vector2( -12, -110 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "complete_game"
} ]
}

[node name="Spaceship" type="Sprite"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -12, -32 )
hframes = 7
script = ExtResource( 4 )

[node name="PlayerTrigger" parent="." instance=ExtResource( 2 )]
monitoring = false

[node name="CollisionShape2D" parent="PlayerTrigger" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="HintPointer" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -34 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/TakeOff = SubResource( 3 )
[connection signal="use" from="PlayerTrigger" to="." method="_on_PlayerTrigger_use"]

[editable path="PlayerTrigger"]
